# koboldcpp-rocm

./: .gitignore  CMakeLists.txt  MIT_LICENSE_GGML_LLAMACPP_ONLY  MIT_LICENSE_GGML_SDCPP_LLAMACPP_ONLY.md  Makefile  README.md  android_install.sh  class.py  colab.ipynb  convert_hf_to_gguf.py  create_ver_file.bat  create_ver_file.sh  easy_KCPP-ROCm_install.sh  environment-nocuda.yaml  environment.yaml  expose.cpp  expose.h  ggml-alloc.c  ggml-backend.c  ggml-cuda.cu  ggml-cuda.h  ggml-metal.m  ggml-opencl.cpp  ggml-opencl.h  ggml-quants.c  ggml.c  ggml.h  gpttype_adapter.cpp  json_to_gbnf.py  kcpp_docs.embd  kcpp_sdui.embd  klite.embd  koboldcpp.py  koboldcpp.sh  launch.cmd  llama-util.h  llama.cpp  llama.h  make_old_pyinstaller.bat  make_old_pyinstaller_cuda.bat  (+19 more)
.github/ISSUE_TEMPLATE/: create-new-issue.md
.github/workflows/: Pathtester.yml  build.yml  c-cpp.yml  cmake-B-rocm-windows.yml  cmake-rocm-windows.yml  code-coverage.yml  kcpp-build-release-arm64.yaml  kcpp-build-release-linux-cuda12.yaml  kcpp-build-release-linux-oldpc.yaml  kcpp-build-release-linux-rocm.yaml  kcpp-build-release-linux.yaml  kcpp-build-release-osx.yaml  kcpp-build-release-win-cuda.yaml  kcpp-build-release-win-cuda12.yaml  kcpp-build-release-win-full-cu12.yaml  kcpp-build-release-win-full.yaml  kcpp-build-release-win-noavx2-full.yaml  kcpp-build-release-win-oldcpu-full.yaml  kcpp-build-release-win-oldpc.yaml  kcpp-build-release-win.yaml  make-vulkan-windows.yml  tests-rocm-windows  tests-rocm-windows.yml
common/: arg.cpp  chat.cpp  common.cpp  common.h  sampling.cpp  sampling.h
examples/: common.cpp  nix_example.md
examples/benchmark/: benchmark-matmult.cpp
examples/embedding/: embedding.cpp
examples/gguf-split/: gguf-split.cpp
examples/imatrix/: imatrix.cpp
examples/infill/: infill.cpp
examples/llama-bench/: README.md  llama-bench.cpp
examples/llava/: clip-impl.h  clip.cpp  clip.h  llava.cpp  mtmd.cpp  quantclip.cpp  qwen2_vl_surgery.py  qwen2vl-cli.cpp
examples/main/: main.cpp
examples/outetts/: readme.md  voice_cloning.py
examples/outetts/speakers/: david_attenborough.json  en_female_1.json  en_female_2.json  en_male_1.json  en_male_2.json  en_male_3.json  en_male_4.json  gordon_ramsay.json  ja_female_1.json  ja_female_2.json  ja_female_3.json  ja_male_1.json  ko_female_1.json  ko_female_2.json  ko_male_1.json  ko_male_2.json  picard.json  zh_female_1.json  zh_male_1.json
examples/parallel/: parallel.cpp
examples/perplexity/: perplexity.cpp
examples/quantize/: quantize.cpp
examples/quantize-stats/: quantize-stats.cpp
examples/save-load-state/: save-load-state.cpp
examples/server/: server.cpp
examples/speculative/: speculative.cpp
examples/tts/: convert_pt_to_hf.py  tts.cpp
ggml-cuda/: common.cuh  fattn.cu  mmq.cu  mmq.cuh
ggml/include/: ggml-cuda.h  ggml-metal.h  ggml.h
ggml/src/: ggml-backend-reg.cpp  ggml-backend.c  ggml-backend.cpp  ggml-blas.cpp  ggml-cpu.c  ggml-cuda.cu  ggml-impl.h  ggml-metal.m  ggml-quants.c  ggml-vulkan-shaders.hpp  ggml-vulkan.cpp  ggml.c  gguf.cpp
ggml/src/ggml-cpu/: binary-ops.cpp  ggml-cpu-aarch64.c  ggml-cpu-aarch64.cpp  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu-traits.cpp  ggml-cpu-traits.h  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cuda/: common.cuh  fattn-mma-f16.cuh  fattn-tile-f16.cu  fattn-vec-f16.cuh  fattn-wmma-f16.cu  fattn.cu  ggml-cuda.cu  mmq.cu  mmq.cuh
ggml/src/ggml-metal/: ggml-metal.m
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: dequant_funcs_cm2.comp  flash_attn.comp  mul_mm.comp  types.comp  vulkan-shaders-gen.cpp
ggml/src/vulkan-shaders/: pad.comp  vulkan-shaders-gen.cpp
include/: llama.h
include/vulkan/spirv_cross/: spirv_msl.hpp
kcpp_adapters/: Alpaca.json  AutoGuess.json  ChatML-NoThink.json  ChatML.json  Command-R.json  DeepSeek-V2.json  GLM-4.json  Gemma-2.json  Llama-2-Chat.json  Llama-3.json  Llama-4.json  Metharme.json  Mistral V2 & V3.json  Mistral V3-Tekken.json  Mistral-V1.json  Mistral-V3-Tekken-V7.json  Mistral-V7.json  Mistral.json  Phi-3.json  Vicuna.json
lib/: clblast.lib
otherarch/: embeddings_adapter.cpp  ggml_v2-cuda-legacy.cu  ggml_v2-cuda-legacy.h  ggml_v2-cuda.cu  ggml_v2-cuda.h  ggml_v2.c  ggml_v3-cuda.cu  ggml_v3-cuda.h  ggml_v3.c  ggml_v3.h  ggml_v3b-opencl.cpp  ggml_v3b-opencl.h  gpt2_v3.cpp  gptj_v3.cpp  llama-util.h  llama_v2-util.h  llama_v2.cpp  llama_v2.h  llama_v3.cpp  llama_v3.h  mpt_v3.cpp  neox_v3.cpp  otherarch.h  rwkv_v2.cpp  rwkv_v3.cpp  rwkv_vocab.cpp  tts_adapter.cpp  utils.cpp  utils.h
otherarch/sdcpp/: CMakeLists.txt  clip.hpp  common.hpp  conditioner.hpp  denoiser.hpp  diffusion_model.hpp  esrgan.hpp  flux.hpp  ggml_extend.hpp  gits_noise.inl  lora.hpp  main.cpp  model.cpp  model.h  sd_adapter.cpp  sdtype_adapter.cpp  stable-diffusion.cpp  stable-diffusion.h  t5.hpp  tae.hpp  unet.hpp  upscaler.cpp  util.cpp  util.h
otherarch/tools/: common-ggml.cpp  common-ggml.h  gpt2_quantize.cpp  gptj_quantize.cpp  make_old_pyinstaller.bat  make_old_pyinstaller_cuda.bat  make_pyinstaller_hybrid_henk.bat  mpt_quantize.cpp  neox_quantize.cpp
otherarch/tools/unused/: class.py  mainfn.txt
otherarch/whispercpp/: dr_wav.h  main.cpp  whisper.cpp  whisper.h  whisper_adapter.cpp
src/: llama-context.cpp  llama-graph.cpp  llama-kv-cache-recurrent.cpp  llama-kv-cache-unified.cpp  llama-kv-cache.cpp  llama-mmap.cpp  llama-model-loader.cpp  llama-model.cpp  llama-quant.cpp  llama-sampling.cpp  llama-sampling.h  llama-vocab.cpp  llama-vocab.h  llama.cpp  unicode.cpp
tools/: kcpplauncherhook.py  quantclip.cpp
tools/llava/: clip.cpp  clip.h  llava.cpp  mtmd.cpp
tools/main/: main.cpp
tools/mtmd/: clip.cpp  clip.h  llava.cpp  mtmd.cpp
tools/quantize/: quantize.cpp
